--- a/package.json
+++ b/package.json
@@ -16,5 +16,27 @@
   "bugs": {
     "url": "https://github.com/HiromiShikata/npm-move-all-issues-in-projects-to-other-project/issues"
   },
-  "homepage": "https://github.com/HiromiShikata/npm-move-all-issues-in-projects-to-other-project#readme"
+  "homepage": "https://github.com/HiromiShikata/npm-move-all-issues-in-projects-to-other-project#readme",
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^9.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "^8.23.0",
+    "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "jest-html-reporter": "^3.6.0",
+    "jest-junit": "^14.0.1",
+    "prettier": "^2.7.1",
+    "semantic-release": "^19.0.5",
+    "ts-jest": "^28.0.8",
+    "typescript": "^4.8.2"
+  }
 }
