--- a/package.json
+++ b/package.json
@@ -56,5 +56,9 @@
     "semantic-release": "^19.0.5",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@octokit/graphql": "^5.0.1",
+    "octokit": "^2.0.7"
   }
 }
